add sections hero and products

--- a/index.html
+++ b/index.html
@@ -19,27 +19,102 @@
   <body>
     <header>
       <div class="container">
-      <div class="header-wrapper">
-        <div class="header-menu">
-          <img src="images/icons/logo.svg" alt="logo" />
-          <ul>
-            <li>Home</li>
-            <li>Products</li>
-            <li>Contacts</li>
-          </ul>
-        </div>
-        <div class="header-sidebar">
-          <img src="images/icons/basket.svg" alt="basket" />
-          <img src="images/icons/login.svg" alt="login" />
-          <div class="sidebar-divider"></div>
-          <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+        <div class="header-wrapper">
+          <div class="header-menu">
+            <img src="images/icons/logo.svg" alt="logo" />
+            <ul>
+              <li>Home</li>
+              <li>Products</li>
+              <li>Contacts</li>
+            </ul>
+          </div>
+          <div class="header-sidebar">
+            <img src="images/icons/basket.svg" alt="basket" />
+            <img src="images/icons/login.svg" alt="login" />
+            <div class="sidebar-divider"></div>
+            <div class="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
         </div>
       </div>
-      </div>
     </header>
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero-wrapper">
+          <div class="left-content">
+            <h1 class="hero-title">Buy your dream plants</h1>
+            <div class="hero-textarea">
+              <div class="textarea-wrapper">
+                <span class="textarea-subtitle">50+</span>
+                <span class="textarea-descr">Plant Species</span>
+              </div>
+              <div class="textarea-divider"></div>
+              <div class="textarea-wrapper">
+                <span class="textarea-subtitle">100+</span>
+                <span class="textarea-descr">Customers</span>
+              </div>
+            </div>
+            <form class="form-wrapper">
+              <input
+                class="search-area"
+                type="search"
+                name="search"
+                id="search"
+                placeholder="What are you looking for?"
+              />
+              <input
+                class="search-submit"
+                type="submit"
+                name="submit"
+                class="submit"
+                value=""
+              />
+            </form>
+          </div>
+          <div class="right-content">
+            <img src="images/zameo.png" alt="photo of a plant" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="products">
+      <div class="container">
+        <div class="products-wrapper">
+          <div class="title-wrapper">
+            <h2 class="title">Best Selling Plants</h2>
+            <h2 class="subtitle">
+              Easiest way to healthy life by buying your favorite plants
+            </h2>
+            <button class="btn-primary">See more</button>
+          </div>
+          <div class="product-item">
+            <img src="images/products/sanseeveria.png" alt="sanseeveria" />
+            <div class="item-descr">
+              <span class="product-name">Natural Plants</span>
+              <span class="product-price">₱ 1,400.00</span>
+            </div>
+          </div>
+          <div class="product-item">
+            <img src="images/products/sukkulent.png" alt="sukkulent" />
+            <div class="item-descr">
+              <span class="product-name">Artificial Plants</span>
+              <span class="product-price">₱ 900.00</span>
+            </div>
+          </div>
+          <div class="product-item">
+            <img src="images/products/cactus.png" alt="cactus">
+            <div class="item-descr">
+              <span class="product-name">Artificial Plants</span>
+              <span class="product-price">₱ 3,500.00</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
